Bug 399463 - Discover fails to install flatpakref files
Summary: Discover fails to install flatpakref files
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-06 20:43 UTC by Patrick Silva
Modified: 2018-10-08 20:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.1
Sentry Crash Report:


Attachments
demonstration (1.73 MB, video/webm)
2018-10-06 20:43 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-10-06 20:43:52 UTC
Created attachment 115452 [details]
demonstration

On neon dev unstable...

STEPS TO REPRODUCE
1. download discord flatpakref at https://flathub.org/apps/details/com.discordapp.Discord
2. right click the flatpakref file in dolphin, select "open with discover"
3. 

OBSERVED RESULT
error message "cannot interact with flatpak resources..."
despite flatpak backend is installed.
Watch the screencast.

ADDITIONAL INFORMATION
sometimes discover does not show any error message, it shows
just a blank page. It occurs with filezilla
https://flathub.org/apps/details/org.filezillaproject.Filezilla
Comment 1 Aleix Pol 2018-10-08 13:15:34 UTC
Git commit 1aa02b211b4cd5403c76bf21cbd467bc6b597c96 by Aleix Pol.
Committed on 08/10/2018 at 13:12.
Pushed by apol into branch 'Plasma/5.14'.

Never lie about flatpak being present when it's actually present

There could be other reasons why it's returning null

M  +3    -1    discover/DiscoverObject.cpp
M  +4    -0    libdiscover/utils.h

https://commits.kde.org/discover/1aa02b211b4cd5403c76bf21cbd467bc6b597c96
Comment 2 Aleix Pol 2018-10-08 13:15:34 UTC
Git commit 344197f6cafeb6137af85475a4d3421ba9ce0539 by Aleix Pol.
Committed on 08/10/2018 at 13:00.
Pushed by apol into branch 'Plasma/5.14'.

flatpak: add a fallback when the resource in the flatpakref file is already in

M  +23   -11   libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp
M  +2    -1    libdiscover/backends/FlatpakBackend/FlatpakBackend.h

https://commits.kde.org/discover/344197f6cafeb6137af85475a4d3421ba9ce0539