Never lie about flatpak being present when it's actually present

There could be other reasons why it's returning null

BUG: 399463